# bioimageio-uploader-review

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bioimageio_upload_review/: __main__.py  api.py
bioimageio_uploader_service/: __init__.py  __main__.py  api.py
