[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bioimageio-uploader-service"
version = "0.1.0"
readme = "README.md"
description = "BioImage.IO Uploader Service Functions."
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["bioimageio_upload_review*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "bioimageio-uploader-service = bioimageio_uploader_service.__main__:main",
]
